# FitnessTracker

./: .gitattributes  .gitignore  README.md  app.py  build.sh  models.py  pyproject.toml  render.yaml  render_requirements.txt
attached_assets/: Pasted--Running-gunicorn-main-app-Traceback-most-recent-call-last-File-opt-render-project-src--1744897753211.txt  Pasted-Awesome-idea-a-simple-self-hosted-web-app-for-gym-tracking-among-friends-is-totally-doable-even-w-1744889684556.txt  Pasted-Great-choice-using-Render-for-deploying-your-Flask-app-Here-s-a-step-by-step-guide-to-get-your-Fit-1744892771390.txt  Pasted-The-error-you-re-encountering-during-deployment-on-Render-tool-poetry-section-not-found-in-pyproj-1744893517008.txt
static/css/: style.css
static/js/: google_api.js  main.js
templates/: checkin.html  feed.html  index.html  layout.html  leaderboard.html
utils/: drive_helper.py  sheets_helper.py
