[tool.poetry]
name = "report-app"
version = "0.1.0"
description = "Aplicación de seguimiento de entrenamiento en el gimnasio para grupos de amigos"
authors = ["Report Team <reportense.banda@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
email-validator = "^2.1.0"
flask = "^2.3.3"
flask-sqlalchemy = "^3.1.1"
google-api-python-client = "^2.113.0"
google-auth = "^2.25.2"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9" 
werkzeug = "^2.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
